[tool.poetry]
name = "matrix"
version = "0.1.0"
description = "Matrix data Analysis"
authors = ["jtruckse"]
package-mode = false

[tool.poetry.dependencies]
pandas ="^2.1"
numpy = "^2.0"
requests = "^2.3"
matplotlib = "^3.7"
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"